--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
 <h1>トップページ</h1>
 
 <% if user_signed_in? %>
+  <div>
+    <ul class="list-none flex space-x-4">
+      <li><%= link_to "学習記録を書く", "#" %></li>
+      <li><%= link_to "エラーとプロンプト記事", "#" %></li>
+    </ul>
+  </div>
   <div class="my-5">
     <%= link_to "ログアウト", destroy_user_session_path, method: :delete, data: { turbo_method: :delete, turbo_confirm: "本当にログアウトしますか？" }, class: "font-semibold py-2 px-4 rounded text-white bg-sky-600 hover:bg-sky-800 cursor-pointer" %>
   </div>
