記事index画面仮作成

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
   <div>
     <ul class="list-none flex space-x-4">
       <li><%= link_to "学習記録を書く", "#" %></li>
-      <li><%= link_to "エラーとプロンプト記事", "#" %></li>
+      <li><%= link_to "エラーとプロンプト記事", articles_path %></li>
     </ul>
   </div>
   <div class="my-5">
