--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,9 +1,8 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2><%= t("devise.registrations.edit.title", resource: resource_name.to_s.humanize) %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
-  <!-- 名前の入力フォームを追加 -->
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name, autofocus: true %>
@@ -15,30 +14,35 @@
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+    <%= f.label :password, t("activerecord.attributes.user.password") %>
+    <i><%= t("devise.registrations.edit.leave_blank_if_you_don_t_want_to_change_it") %></i><br />
+    <%= f.password_field :password,
+        autocomplete: "new-password",
+        placeholder: t("devise.shared.minimum_password_length", count: @minimum_password_length) %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, t("activerecord.attributes.user.password_confirmation") %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit t("devise.registrations.edit.update") %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3><%= t("devise.registrations.edit.cancel_my_account") %></h3>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+<div>
+  <%= t("devise.registrations.edit.unhappy") %>
+  <%= button_to t("devise.registrations.edit.cancel_my_account"),
+      registration_path(resource_name),
+      data: { confirm: t("devise.registrations.edit.are_you_sure"), turbo_confirm: t("devise.registrations.edit.are_you_sure") },
+      method: :delete %>
+</div>
 
-<%= link_to "Back", :back %>
+<%= link_to t("devise.shared.links.back"), :back %>
