--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,3 +4,28 @@
   <span> <%= "#{@user.name}さんの記事" %></span>
 </h4>
 
+<h1>記事一覧</h1>
+
+<%= form_with model: @search_form, url: articles_path, method: :get, data: { turbo_frame: "articles" } do |f| %>
+  <div>
+    <label>キーワード</label>
+    <%= f.text_field :keyword %>
+  </div>
+  <div>
+    <label>カテゴリ</label>
+    <%= f.select :category, Article.categories.keys.map { |k| [k.humanize, Article.categories[k]] }, include_blank: true %>
+  </div>
+  <div>
+    <%= f.submit "検索" %>
+  </div>
+<% end %>
+
+<turbo-frame id="articles">
+  <ul>
+    <% @articles.each do |article| %>
+      <li>
+        <strong><%= article.title %></strong> - カテゴリ: <%= article.category %>
+      </li>
+    <% end %>
+  </ul>
+</turbo-frame>
