記事の新規作成機能追加

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,6 +19,9 @@
     <%= f.submit "検索" %>
   </div>
 <% end %>
+<div class="mb-3">
+  <%= link_to "新規作成", new_article_path, class: "btn btn-primary" %>
+</div>
 
 <turbo-frame id="articles">
   <ul>
