--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,5 +7,5 @@
   <p><%= image_tag @article.image %></p>
 <% end %>
 
-<p>投稿者: <%= @article.user.email %></p>
+<p>投稿者: <%= @article.user.name %></p>
 <%= link_to "編集", edit_article_path(@article) %>
