編集・更新・削除機能追加

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,3 +9,4 @@
 
 <p>投稿者: <%= @article.user.name %></p>
 <%= link_to "編集", edit_article_path(@article) %>
+<%= button_to "削除", article_path(@article), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger" %>
