--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -33,19 +33,8 @@
   <%= f.submit "コメントする" %>
 <% end %>
 
+<h2>コメント一覧</h2>
+
 <% @article.comments.each do |comment| %>
-  <div>
-    <p><strong>タグ:</strong> <%= Array(comment.tag).map(&:humanize).join(", ") %></p>
-    <p><strong>本文:</strong> <%= comment.body %></p>
-    <% if comment.image.attached? %>
-      <%= image_tag comment.image, width: 200 %>
-    <% end %>
-  </div>
-  <div class="comment">
-    <p><%= comment.body %></p>
-    <% if comment.user == current_user %>
-      <%= link_to "編集", edit_article_comment_path(@article, comment) %>
-      <%= link_to "削除", article_comment_path(@article, comment), method: :delete, data: { confirm: "本当に削除しますか？" } %>
-    <% end %>
-  </div>
+  <%= render partial: "comments/comment", locals: { comment: comment } %>
 <% end %>
