--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,3 @@
 <turbo-frame id="comment_<%= @comment.id %>">
-  <%= form_with(model: [@article, @comment], local: false) do |f| %>
-    <%= f.text_area :body %>
-    <%= f.submit "更新", class: "btn btn-primary" %>
-  <% end %>
+  <%= render partial: "form", locals: { comment: @comment } %>
 </turbo-frame>
