--- a/app/views/comments/update.turbo_stream.erb
+++ b/app/views/comments/update.turbo_stream.erb
@@ -1,5 +1,5 @@
 <turbo-stream target="comment_<%= @comment.id %>" action="replace">
   <template>
-    <%= render partial: "comments/comment", locals: { comment: @comment } %>
+    <%= render partial: "comments/comment", formats: [:html], locals: { comment: @comment } %>
   </template>
 </turbo-stream>
