--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -1,17 +1,19 @@
-<%= form_with model: content do |f| %>
-    <% if content.errors.any? %>
-      <div style="color: red;">
-        <ul>
-          <% content.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-        </ul>
+<%= turbo_frame_tag dom_id(content) do %>
+    <%= form_with model: content, local: false do |f| %>
+      <% if content.errors.any? %>
+        <div style="color: red;">
+          <ul>
+            <% content.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+  
+      <div>
+        <%= f.label :name, "学習項目名" %>
+        <%= f.text_field :name %>
+        <%= f.submit content.persisted? ? "更新" : "追加" %>
       </div>
     <% end %>
-  
-    <div>
-      <%= f.label :name, "新しい学習項目" %>
-      <%= f.text_field :name %>
-      <%= f.submit "追加" %>
-    </div>
   <% end %>
