チェックボックスの内容をbodyに箇条書きで保存する

--- a/app/views/learning_items/index.html.erb
+++ b/app/views/learning_items/index.html.erb
@@ -10,4 +10,4 @@
   <%= render "form", content: @content %>
 <% end %>
 
-<%= link_to "← 学習記録作成に戻る", new_study_path %>
+<%= link_to "← 学習記録作成に戻る", new_study_record_path %>
