--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 <% if user_signed_in? %>
   <div>
     <ul class="list-none flex space-x-4">
-      <li><%= link_to "学習記録を書く", studies_path %></li>
+      <li><%= link_to "学習記録を書く", study_records_path %></li>
       <li><%= link_to "エラーとプロンプト記事", articles_path %></li>
     </ul>
   </div>
