--- a/app/views/study_records/new.html.erb
+++ b/app/views/study_records/new.html.erb
@@ -46,6 +46,6 @@
 <h2>その他操作</h2>
 
 <ul>
-  <li><%= link_to "学習項目の一覧へ", contents_path %></li>
+  <li><%= link_to "学習項目の一覧へ", learning_items_path %></li>
   <li><%= link_to "学習項目を新しく追加する", new_content_path %></li>
 </ul>
