--- a/app/views/study_records/show.html.erb
+++ b/app/views/study_records/show.html.erb
@@ -10,5 +10,6 @@
   <% end %>
 </ul>
 
-<%= link_to "編集", edit_study_path(@study) %> |
-<%= link_to "一覧へ戻る", studies_path %>
+<%= link_to "編集", edit_study_records_path
+(@study) %> |
+<%= link_to "一覧へ戻る", study_records_path %>
