--- a/app/views/study_records/index.html.erb
+++ b/app/views/study_records/index.html.erb
@@ -3,9 +3,9 @@
   <span> <%= "#{current_user.name}さんの学習記録" %></span>
 </h4>
 
-<%= link_to "新しい学習記録を追加", new_study_path, class: "btn btn-primary mb-3" %>
+<%= link_to "新しい学習記録を追加", new_study_record_path, class: "btn btn-primary mb-3" %>
 
-<%= form_with url: studies_path, method: :get, local: true do |f| %>
+<%= form_with url: study_records_path, method: :get, local: true do |f| %>
   <%= f.label :from, "開始日" %>
   <%= f.date_field :from, value: @search_form.from %>
 
