名称変更の表記修正など

--- a/app/views/learning_items/ update.turbo_stream.erb
+++ b/app/views/learning_items/ update.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.replace dom_id(@content), partial: "content", locals: { content: @content } %>
+<%= turbo_stream.replace dom_id(@learning_item), partial: "learning_item", locals: { learning_item: @learning_item } %>
