--- a/app/views/study_records/show.html.erb
+++ b/app/views/study_records/show.html.erb
@@ -1,7 +1,7 @@
 <h2>学習記録詳細</h2>
 
-<p><strong>日付:</strong> <%= @study.date %></p>
-<p><strong>内容:</strong> <%= simple_format(@study.body) %></p>
+<p><strong>日付:</strong> <%= @study_record.date %></p>
+<p><strong>内容:</strong> <%= simple_format(@study_record.body) %></p>
 
 <p><strong>学習項目:</strong></p>
 <ul>
