--- a/app/views/learning_items/index.html.erb
+++ b/app/views/learning_items/index.html.erb
@@ -1,13 +1,22 @@
-<h2>学習項目一覧</h2>
+<h1>学習項目一覧</h1>
 
-<%= turbo_frame_tag "contents" do %>
-  <%= render partial: "content", collection: @contents, as: :content %>
-<% end %>
+<div id="learning_items_list">
+  <%= render @learning_items %> <!-- _learning_item.html.erb を利用する -->
+</div>
 
-<h2>新しい学習項目を追加</h2>
+<div id="new_learning_item_form">
+  <%= render partial: "form", locals: { learning_item: @learning_item } %>
+</div>
 
-<%= turbo_frame_tag "new_content" do %>
-  <%= render "form", content: @content %>
-<% end %>
+<!-- 未完了の学習項目チェックボックスリスト -->
+<div>
+  <h2>未完了の学習項目</h2>
+  <% @learning_items.where(completed: false).each do |item| %>
+    <div>
+      <%= check_box_tag "learning_item_ids[]", item.id, false, disabled: true %>
+      <%= label_tag "learning_item_#{item.id}", item.name %>
+    </div>
+  <% end %>
+</div>
 
 <%= link_to "← 学習記録作成に戻る", new_study_record_path %>
