--- a/app/views/learning_items/_list.html.erb
+++ b/app/views/learning_items/_list.html.erb
@@ -9,17 +9,13 @@
       </tr>
     </thead>
     <tbody>
-      <% learning_items.each do |item| %>
-        <tr id="<%= dom_id(item) %>">
-          <td><%= item.name %></td>
-          <td><%= item.completed ? "完了" : "未完了" %></td>
-          <td>
-            <%= button_to "切替", toggle_complete_learning_item_path(item), method: :patch, form: { data: { turbo: true } } %>
-            <%= link_to "編集", edit_learning_item_path(item) %>
-            <%= button_to "削除", learning_item_path(item), method: :delete, data: { confirm: "本当に削除しますか？" } %>
-          </td>
-        </tr>
-      <% end %>
+      <ul>
+        <% learning_items.each do |item| %>
+          <li id="learning_item_<%= item.id %>">
+            <%= item.name %> <% if item.completed %>✅<% end %>
+          </li>
+        <% end %>
+      </ul>
     </tbody>
   </table>
 </div>
