--- a/app/views/study_records/edit.html.erb
+++ b/app/views/study_records/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>学習記録の作成</h1>
+<h1>学習記録の編集</h1>
 
 <% if @study_record.errors.any? %>
   <div style="color: red;">
@@ -9,8 +9,6 @@
     </ul>
   </div>
 <% end %>
-
-<h2>新規学習記録作成</h2>
 
 <%= form_with model: @study_record, local: true do |f| %>
   <div>
@@ -23,13 +21,13 @@
       <h3>学習項目（チェックしてください）</h3>
       <% @learning_items.each do |item| %>
         <div>
-          <%= check_box_tag "study_record[learning_item_ids][]", item.id, false, id: "learning_item_#{item.id}" %>
+          <%= check_box_tag "study_record[learning_item_ids][]", item.id, @study_record.learning_item_ids.include?(item.id), id: "learning_item_#{item.id}" %>
           <%= label_tag "learning_item_#{item.id}", item.name %>
         </div>
       <% end %>
     </div>
   <% else %>
-    <p>未完了の学習項目がありません。</p>
+    <p>未完了または選択済みの学習項目がありません。</p>
   <% end %>
 
   <div>
@@ -37,13 +35,12 @@
     <%= f.text_area :body, placeholder: "自由記述欄としてお使いください" %>
   </div>
 
-  <%= f.submit "記録する", class: "btn btn-primary mt-3" %>
+  <%= f.submit "更新する", class: "btn btn-primary mt-3" %>
 <% end %>
 
 <hr>
 
 <h2>その他操作</h2>
 <ul>
-  <li><%= link_to "学習項目の一覧へ", learning_items_path %></li>
   <li><%= link_to "学習記録一覧へ戻る", study_records_path %></li>
 </ul>
