学習項目追加のTurbo修正

--- a/app/views/learning_items/_list.html.erb
+++ b/app/views/learning_items/_list.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h2><%= status == "complete" ? "完了済み項目" : "未完了項目" %></h2>
-  <ul>
+  <ul id="learning_items_list"> <!-- ← ここにidを付ける -->
     <% learning_items.each do |item| %>
       <%= render partial: "item", locals: { learning_item: item } %>
     <% end %>
