--- a/app/views/learning_items/_list.html.erb
+++ b/app/views/learning_items/_list.html.erb
@@ -1,8 +1,8 @@
-<div>
+<div id="learning_items_list">
   <h2><%= status == "complete" ? "完了済み項目" : "未完了項目" %></h2>
-  <ul id="learning_items_list"> <!-- ← ここにidを付ける -->
+  <ul>
     <% learning_items.each do |item| %>
-      <%= render partial: "item", locals: { learning_item: item } %>
+      <%= render partial: "item", locals: { learning_item: item, status: status } %>
     <% end %>
   </ul>
 </div>
