一覧、戻るなどリンク追加調整

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,6 +21,7 @@
 <% end %>
 <div class="mb-3">
   <%= link_to "新規作成", new_article_path, class: "btn btn-primary" %>
+  <%= link_to "記事一覧に戻る", articles_path %>
 </div>
 
 <turbo-frame id="articles">
