--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -34,5 +34,6 @@
 
   <div class="mb-3">
     <%= f.submit "記事を作成", class: "btn btn-primary" %>
+    <%= link_to "戻る", study_records_path %>
   </div>
 <% end %>
