--- a/app/views/study_records/new.html.erb
+++ b/app/views/study_records/new.html.erb
@@ -14,13 +14,13 @@
 
 <%= form_with model: @study_record, local: true do |f| %>
   <div>
-    <%= f.label :date, "学習日" %>
+    <%= f.label :date, "学習日(必須)" %>
     <%= f.date_field :date %>
   </div>
 
   <% if @learning_items.any? %>
     <div>
-      <h3>学習項目（チェックしてください）</h3>
+      <h3>学習項目（任意）</h3>
       <% @learning_items.each do |item| %>
         <div>
           <%= check_box_tag "study_record[learning_item_ids][]", item.id, false, id: "learning_item_#{item.id}" %>
